@@ -18,11 +18,6 @@
       <dep package="libsoup"/>
       <dep package="at-spi2-core"/>
       <dep package="at-spi2-atk"/>
-      <dep package="gstreamer"/>
-      <dep package="gst-plugins-base"/>
-      <dep package="gst-plugins-good"/>
-      <dep package="gst-plugins-bad"/>
-      <dep package="gst-ffmpeg"/>
     </dependencies>
   </metamodule>
 
@@ -42,12 +37,6 @@
       href="http://cairographics.org"/>
   <repository type="tarball" name="freedesktop.org"
       href="http://www.freedesktop.org"/>
-  <repository type="git" name="gstreamer"
-      href="git://anongit.freedesktop.org/git/gstreamer/"/>
-  <repository type="git" name="entropywave"
-      href="git://code.entropywave.com/git/"/>
-  <repository type="tarball" name="xiph"
-              href="http://downloads.xiph.org/releases/"/>
 
   <autotools id="make" autogen-sh="configure">
     <branch repo="ftp.gnu.org"
@@ -219,69 +208,6 @@
       <dep package="glib"/>
       <dep package="at-spi2-core"/>
     </dependencies>
-  </autotools>
-
-  <autotools id="orc">
-    <branch repo="entropywave" module="orc.git" checkoutdir="orc" tag="orc-0.4.16" />
-  </autotools>
-
-  <autotools id="gstreamer">
-    <branch repo="gstreamer" module="gstreamer" checkoutdir="gstreamer" revision="80f94703f985d8f125196dec1baa08d46657923f"/>
-  </autotools>
-
-  <autotools id="libogg" autogen-sh="configure" >
-     <branch repo="xiph" module="ogg/libogg-1.3.0.tar.gz"
-             hash="sha256:a8de807631014615549d2356fd36641833b8288221cea214f8a72750efe93780"
-             md5sum="0a7eb40b86ac050db3a789ab65fe21c2"
-             version="1.3.0"/>
-  </autotools>
-  <autotools id="libvorbis" autogen-sh="configure" autogenargs="--disable-examples" >
-     <branch repo="xiph" module="vorbis/libvorbis-1.3.3.tar.gz"
-             hash="sha256:6d747efe7ac4ad249bf711527882cef79fb61d9194c45b5ca5498aa60f290762"
-             md5sum="6b1a36f0d72332fae5130688e65efe1f"
-             version="1.3.3"/>
-  </autotools>
-  <autotools id="libtheora" autogen-sh="configure" autogenargs="--disable-examples">
-     <branch repo="xiph" module="theora/libtheora-1.1.1.tar.gz"
-             hash="sha256:40952956c47811928d1e7922cda3bc1f427eb75680c3c37249c91e949054916b"
-             md5sum="bb4dc37f0dc97db98333e7160bfbb52b"
-             version="1.1.1"/>
-    <dependencies>
-      <dep package="libogg"/>
-      <dep package="libvorbis"/>
-    </dependencies>
-  </autotools>
-
-  <autotools id="gst-plugins-base" autogenargs="--disable-examples">
-    <dependencies>
-      <dep package="gstreamer"/>
-      <dep package="libogg"/>
-      <dep package="libvorbis"/>
-      <dep package="libtheora"/>
-      <dep package="orc"/>
-    </dependencies>
-    <branch repo="gstreamer" module="gst-plugins-base" checkoutdir="gst-plugins-base" revision="4b56b731d26eca35967075c34f375788f4a531b3"/>
-  </autotools>
-
-  <autotools id="gst-plugins-good" autogenargs="--disable-examples">
-    <dependencies>
-      <dep package="gst-plugins-base"/>
-    </dependencies>
-    <branch repo="gstreamer" module="gst-plugins-good" checkoutdir="gst-plugins-good" revision="cc6d533521841bc949136e969d96230ad7a30bd2"/>
-  </autotools>
-
-  <autotools id="gst-plugins-bad" autogenargs="--disable-examples">
-    <dependencies>
-      <dep package="gst-plugins-base"/>
-    </dependencies>
-    <branch repo="gstreamer" module="gst-plugins-bad" checkoutdir="gst-plugins-bad" revision="62e5afb95e3e11c4269664c2d782d4e4e7bc803e"/>
-  </autotools>
-
-  <autotools id="gst-ffmpeg" autogenargs="--with-libav-extra-configure='--disable-yasm'">
-    <dependencies>
-      <dep package="gst-plugins-base"/>
-    </dependencies>
-    <branch repo="gstreamer" module="gst-ffmpeg" checkoutdir="gst-ffmpeg" revision="c77db02d6e8a0e5a5190f01d1fe334e13d192766"/>
   </autotools>
 
 </moduleset>
